--- a/app/views/home/home.jade
+++ b/app/views/home/home.jade
@@ -1,15 +1,4 @@
-doctype html
-html
-  head
-    title
-    link(rel="stylesheet", href="/css/styles.css")
-  body
-    nav
-      ul
-        li: a(href="/") Home
-        li: a(href="/about") About
-        li: a(href="/faq") FAQ
-        li: a(href="/items/new") Add Item
-        li: a(href="/items") Current List
+extends ../shared/template
+block contentdoctype html
     .wrapper
       h1 Home
