--- a/app/views/items/init.jade
+++ b/app/views/items/init.jade
@@ -1,17 +1,5 @@
-doctype html
-html
-head
-    meta(charset-"UTF-8")
-    title
-    link(rel="stylesheet", href='/css/styles.css')
-body
-  nav
-    ul
-      li: a(href="/") Home
-      li: a(href="/about") About
-      li: a(href="/faq") FAQ
-      li: a(href="/items/new") Add Item
-      li: a(href="/items") Current List
+extends ../shared/template
+block content
   .wrapper
     .forms
      h1 Add Item
